--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,22 @@ group 'org.lateralgm'
 version '2.0.0-SNAPSHOT'
 
 buildscript {
-    ext {
-        versionKotlin = '1.0.3'
-        versionJoshEdit = '1.0.0-SNAPSHOT'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versionKotlin"
-    }
+	ext {
+		versionKotlin = '1.0.3'
+		versionJoshEdit = '1.0.0-SNAPSHOT'
+	}
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versionKotlin"
+	}
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'application'
+
+mainClassName = 'org.lateralgm.main.LGM'
 
 repositories {
 	mavenLocal()
@@ -23,8 +26,8 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$versionKotlin"
-    compile "org.lateralgm.joshedit:JoshEdit:$versionJoshEdit"
+	compile "org.jetbrains.kotlin:kotlin-stdlib:$versionKotlin"
+	compile "org.lateralgm.joshedit:JoshEdit:$versionJoshEdit"
 }
 
 task wrapper(type: Wrapper) {
