chore: enable building of artifacts on CI

--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,6 @@
 test:
+   override:
+      - ./gradlew build test
    post:
       - mv build/distributions/*.zip $CIRCLE_ARTIFACTS/
       - mv build/reports $CIRCLE_ARTIFACTS/
