--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ buildscript {
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+
 mainClassName = 'org.lateralgm.main.LGM'
 
 jar {
